# RISC-Z

./: .gitignore  .gitmodules  README.md  _build.bat  _run.bat  cpu.c  cpu.h  ecall.c  ecall.h  factorial.hex
.github/workflows/: c_build_tests.yml
examples/C/: README.md
examples/C/01.Argp/: README.md
examples/C/01.GetOpt_Argp/: README.md  argp_example.c  getopt_example.c
examples/C/02.A.Fractal/: image.c
examples/C/02.B.RISC-Z/: CMakeLists.txt  README.md  main.c  memory.h  meson.build  risc-z.c
examples/C/02.Desktop_Search/: 2.1.md  2.2.md  2.3.md  README.md
examples/C/03.A.Fractal/: image.h
examples/C/03.B.RISC-Z/: CMakeLists.txt  README.md  cpu.c  cpu.h  main.c  memory.h  meson.build  misc.h  risc-z.h
examples/C/03.C.Lang/: _setup_build_configs.sh  basic.h  basic.peg  main.c  meson.build
slides/: 01_0.C_Language_History.tex  Makefile
slides/res/: lections.sty
